:recycle: [SSO] Refactored not correct JwtCredentials to OpenIdCredentials
